tests/machine/x/pl/record_assign.out
ERROR: /workspace/mochi/tests/machine/x/pl/record_assign.pl:17:13: Syntax error: Operator priority clash

